--- a/.eslintrc
+++ b/.eslintrc
@@ -17,9 +17,9 @@
     "no-nested-ternary": 0,
     "one-var-declaration-per-line": [2, "initializations"],
     "one-var": [2, { initialized: "never" }],
-    max-len: [0, 120],
-    no-plusplus: [2, { "allowForLoopAfterthoughts": true }],
-    no-confusing-arrow: 0,
-    consistent-return: 0
+    "max-len": [0, 120],
+    "no-plusplus": [2, { "allowForLoopAfterthoughts": true }],
+    "no-confusing-arrow": 0,
+    "consistent-return": 0
   }
 }
