--- a/.stylelintrc
+++ b/.stylelintrc
@@ -11,21 +11,21 @@
       "custom-properties",
       "dollar-variables",
       {
-        type: 'at-rule',
-        name: 'mixin'
+        type: "at-rule",
+        name: "mixin"
       },
       {
-        type: 'at-rule',
-        name: 'include'
+        type: "at-rule",
+        name: "include"
       },
       {
-        type: 'at-rule',
-        name: 'extend'
+        type: "at-rule",
+        name: "extend"
       },
       "declarations",
       {
-        type: 'at-rule',
-        name: 'media'
+        type: "at-rule",
+        name: "media"
       },
       "rules"
     ],
@@ -104,6 +104,25 @@
       "transition",
       "animation",
       "cursor"
-    ]
+    ],
+    "at-rule-no-unknown": [ true, {
+      ignoreAtRules: [
+        "extend",
+        "at-root",
+        "debug",
+        "warn",
+        "error",
+        "if",
+        "else",
+        "for",
+        "each",
+        "while",
+        "mixin",
+        "include",
+        "content",
+        "return",
+        "function"
+      ]
+    }]
   }
 }
