--- a/package.json
+++ b/package.json
@@ -2,17 +2,12 @@
   "name": "Mogo",
   "version": "1.0.0",
   "author": "Anastasiia Kozenko",
-  "main": "index.js",
+  "scripts": {
+    "update:packages": "node wipe-dependencies.js && rm -rf node_modules && npm update --save-dev && npm update --save"
+  },
   "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.1",
-    "babel-preset-es2015": "^6.22.0",
-    "browser-sync": "^2.18.12",
+    "browser-sync": "^2.18.13",
     "del": "^3.0.0",
-    "eslint": "^4.2.0",
-    "eslint-config-airbnb-base": "^11.1.0",
-    "eslint-loader": "^1.9.0",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-cache": "^0.4.6",
@@ -21,11 +16,11 @@
     "gulp-load-plugins": "^1.5.0",
     "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
-    "gulp-pug": "^3.2.0",
+    "gulp-pug": "^3.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-scss": "^1.4.0",
-    "gulp-sourcemaps": "^2.4.1",
+    "gulp-sourcemaps": "^2.6.1",
     "gulp-svg-sprites": "^4.1.2",
     "gulplog": "^1.0.0",
     "imagemin-jpeg-recompress": "^5.1.0",
@@ -34,9 +29,6 @@
     "stylelint": "^8.0.0",
     "stylelint-config-standard": "^17.0.0",
     "stylelint-order": "^0.6.0",
-    "stylelint-scss": "^1.5.1",
-    "vinyl-named": "^1.1.0",
-    "webpack": "^3.3.0",
-    "webpack-stream": "^3.2.0"
+    "stylelint-scss": "^2.0.1"
   }
 }
